t+io:[[briko]] t+li:[[briek]] t+ms:[[batu bata]] t+nds-nl:[[keie]] t+oc:[[brica]] t-balance t+qu:[[kusasqa tika]] t+sh:[[cigla]] t+wa:[[brike]] ([[WT:EDIT|Assisted]]) <brick#7551789>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -66,6 +66,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Czech: {{t-|cs|cihla|f}}
 * Danish: [[mursten]] {{c}}
 * Dutch: {{t+|nl|baksteen}}
+* [[Dutch Low Saxon]]: {{tø|nds-nl|keie}}
 * Esperanto: {{t-|eo|briko|xs=Esperanto}}
 * Estonian: [[tellis]]
 * Finnish: {{t+|fi|tiili}}
@@ -76,21 +77,27 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Hebrew: {{t+|he|לבנה|sc=Hebr}}
 * Hungarian: {{t+|hu|tégla}}
 * Icelandic: [[múrsteinn]] {{m}}, [[tígulsteinn]] {{m}} {{qualifier|rare}}, [[leirsteinn]] {{m}}  {{qualifier|rare}}
-{{trans-mid}}
+* [[Ido]]: {{t|io|briko}}
 * Indonesian: [[batu bata]]
 * Italian: {{t+|it|mattone}}
+{{trans-mid}}
 * Japanese: {{t|ja|煉瓦|tr=れんが renga|sc=Jpan}}
 * Kurdish:
 *: Sorani: {{t-|ku|خشت|tr=xisht|sc=ku-Arab}}
 * Latin: {{t-|la|later|m}}
 * Latvian: [[ķieģelis]] {{m}}
+* [[Limburgish]]: {{t|li|briek}}
 * Lithuanian: [[plyta]]
+* Malay: {{t|ms|batu bata}}
 * Norwegian: [[murstein]]
+* Occitan: {{t|oc|brica|f}}
 * Polish: {{t+|pl|cegła}}
 * Portuguese: {{t+|pt|tijolo}}
+* [[Quechua]]: {{t|qu|kusasqa tika}}
 * Russian: {{t+|ru|кирпич|m|tr=kirpíč|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[breig]]
 * Serbian: {{t-|sr|опека|sc=Cyrl}}
+* [[Serbo-Croatian]]: {{t|sh|cigla}}
 * Slovak: [[tehla]]
 * Slovene: [[opeka]] {{f}}, [[zidak]] {{m}}
 * Spanish: {{t+|es|ladrillo|m}}
@@ -99,6 +106,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Thai: [[อิฐ]]
 * Turkish: {{t+|tr|tuğla}}
 * Vietnamese: {{t+|vi|gạch|xs=Vietnamese}}
+* [[Walloon]]: {{t|wa|brike}}
 {{trans-bottom}}
 
 {{trans-top|a building material}}
