--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -4,7 +4,7 @@
 ''Chiefly British'', through ''French'' [[espeller]] and dialect nuance.
 
 ====Alternative spellings====
-* [[spelled]]
+* [[spelled]] ''(American English)''
 
 ====Pronunciation====
 * {{IPA|/'spεlt/}}
