t+af:[[braak]] ([[WT:EDIT|Assisted]]) <vomit#7555139>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -19,6 +19,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 
 ====Translations====
 {{trans-top|to regurgitate the contents of a stomach}}
+* [[Afrikaans]]: {{t|af|braak}}
 * [[American Sign Language]]: {{tø|ase|5@Mouth-5@FromUlnarTipFinger 5@FromMouth-5@FromUlnarTipFinger|xs=American Sign Language}}
 * Armenian: {{t-|hy|հետ տալ|tr=het tal|xs=Armenian}}, {{t+|hy|փսխել|tr=p'sxel|xs=Armenian}}, {{t-|hy|ործկալ|tr=orçkal|xs=Armenian}}
 * [[Catalan]]: {{t+|ca|vomitar}}
