--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -52,7 +52,7 @@
 * Italian: {{t+|it|Germania|f}}
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu|sc=Jpan}}, {{t+|ja|独逸|tr=Doitsu|sc=Jpan}} {{qualifier|obsolete}}
 * [[Khmer]]: {{Khmr|[[ប្រទេស​អាឡឺម៉ង់]]}} (bprədtēh āleumong)
-* Korean: {{t+|ja|독일|tr=Dogil|sc=Kore}}; North Korean: {{t|ja|도이췰란드|tr=Doichwillandeu|sc=Kore}},  {{t|ko|독일|tr=dogil|sc=Kore}}
+* Korean: {{t+|ko|독일|tr=Dogil|sc=Kore}}; {{t|ko|도이췰란드|tr=Doichwillandeu|sc=Kore}} (''North Korea''),  {{t|ko|독일|tr=dogil|sc=Kore}}
 * Latin: {{t+|la|Germania|f}}
 {{trans-mid}}
 * Latvian: {{t+|lv|Vācija|f|xs=Latvian}}
@@ -65,7 +65,7 @@
 * [[Malayalam]]: {{t|ml|ജര്മനി|tr=jarmani|sc=Mlym}}
 * Maltese: il-[[Ġermanja]] {{f}}
 * [[Manx]]: [[y Ghiarmaan]]
-* Mongolian: {{t|mn|Герман|tr=German|sc=Cyrl|xs=Mongolian}}
+* Mongolian: {{t|mn|Герман|tr=Germán|sc=Cyrl|xs=Mongolian}}
 * Navajo: {{tø|nv|Bééshbich'ahí}}
 * Norwegian: [[Tyskland]], [[Føderale Republikken Tyskland]]
 * Old English: {{t-|ang|Þēodiscland|n|xs=Old English}}
