--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -68,7 +68,7 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 
 ====External links====
 * {{pedialite}}
-
+[[Category:English coordinates]]
 ----
 
 ==Latin==
