/* Adverb */ =>phrase, cat en coords <et cetera#7556612>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -14,8 +14,8 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 * {{audio|en-us-etc.ogg|Audio (US)}}
 * Common mispronunciations: Eksetra, Eksetera
 
-===Adverb===
-{{en-adv|-}}
+===Phrase===
+{{infl|en|phrase|head=[[et]] [[cetera]]}}
 
 # And the rest, and the others; to complete a list.
 #: ''The grocery sells cucumbers, lettuce, radishes, '''etc'''.''
