--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -29,6 +29,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * Czech: {{t|cs|t. j.}} ([[to]] [[je]])
 * Danish: [[dvs.]] {{i|[[det]] [[vil]] [[sige]]}}
 * Dutch: {{t-|nl|d.w.z.}} {{i|[[dat]] [[wil]] [[zeggen]]}}
+* Esperanto: {{t|eo|t.e.}}
 * Finnish: [[l.]] {{i|[[eli]]}}, [[ts.]] {{i|[[toisin sanoen]]}}
 * French: {{t+|fr|c.-à-d.}}
 * German: [[d. h.]] {{i|[[das heißt]]}}
