iwiki +[[:ml:come]] <come#7575697>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -279,6 +279,7 @@ Latin [[comede]] (imperative), [[comedit]] (present).
 [[la:come]]
 [[li:come]]
 [[hu:come]]
+[[ml:come]]
 [[nl:come]]
 [[ja:come]]
 [[no:come]]
@@ -292,7 +293,7 @@ Latin [[comede]] (imperative), [[comedit]] (present).
 [[ta:come]]
 [[te:come]]
 [[th:come]]
-[[vi:come]]
 [[tr:come]]
 [[uk:come]]
+[[vi:come]]
 [[zh:come]]
