--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -247,6 +247,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 [[kn:curve]]
 [[lo:curve]]
 [[hu:curve]]
+[[ml:curve]]
 [[nl:curve]]
 [[no:curve]]
 [[pl:curve]]
