t+pl:[[bój]] ([[WT:EDIT|Assisted]]) <fight#7579921>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -274,6 +274,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 *: Sorani: {{t|ku|شه‌ڕ|tr=shaR|sc=ku-Arab}}
 * Latin: {{t+|la|pugna}}
 * Norwegian: {{t-|no|slag}}
+* Polish: {{t|pl|bój}}
 * Portuguese: {{t+|pt|batalha|f}}
 * Russian: {{t+|ru|битва|f|tr=bítva|sc=Cyrl}}, {{t+|ru|сражение|n|tr=sražénije|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[cogadh]] {{m}}, [[sabaid]] {{f}}, [[blàr]] {{m}}
