--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -293,6 +293,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 {{trans-mid}}
 * Latin: {{t+|la|pugna}}
 * Norwegian: {{t|no|slåsskamp}}
+* Polish: {{t|pl|starcie|n}}
 * Portuguese: {{t+|pt|briga|f}}
 * Russian: {{t+|ru|драка|f|tr=dráka|sc=Cyrl}}, {{t+|ru|бой|m|tr=boj|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[cogadh]] {{m}}, [[sabaid]] {{f}}
