iwiki +[[:li:bridge]] <bridge#7581609>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -319,6 +319,7 @@ From {{etyl|en|fr}} {{term|bridge|lang=en}}.
 [[kk:bridge]]
 [[sw:bridge]]
 [[lo:bridge]]
+[[li:bridge]]
 [[hu:bridge]]
 [[ml:bridge]]
 [[nl:bridge]]
