--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -117,6 +117,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 [[it:vomit]]
 [[kk:vomit]]
 [[hu:vomit]]
+[[ml:vomit]]
 [[no:vomit]]
 [[pl:vomit]]
 [[simple:vomit]]
