/* Spanish */ expand and cleanup <Israel#7591099>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -197,6 +197,11 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 {{es-proper noun|m}}
 
 # [[#English|Israel]]
+# {{biblical character|lang=es}} [[Jacob]]
+
+====Quotations====
+* {{Santa Biblia|Génesis|32|28}}
+*: Y él dijo: No se dirá más tu nombre Jacob, sino '''Israel''': porque has peleado con Dios y con los hombres, y has vencido.
 
 ----
 
