--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -200,7 +200,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 # {{biblical character|lang=es}} [[Jacob]]
 
 ====Quotations====
-* {{Santa Biblia|Génesis|32|28}}
+* {{RQ:Santa Biblia|Génesis|32|28}}
 *: Y él dijo: No se dirá más tu nombre Jacob, sino '''Israel''': porque has peleado con Dios y con los hombres, y has vencido.
 
 ----
