--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -7,7 +7,7 @@
 * {{rhymes|aʊnt}}
 
 ===Etymology 1===
-From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {{term|computare|lang=la}}, present active infinitive of {{term|computo|computō|compute|lang=la}}.
+From {{etyl|enm}} ''[[counten#Middle English|counten]]'' from {{etyl|xno}} ''[[conter#Anglo-Norman|counter, conter]]'' from {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} from {{etyl|la}} {{term|computare|lang=la}}, present active infinitive of {{term|computo|computō|I compute|lang=la}}. Displaced native {{enm}} ''[[tellen#Middle English|tellen]]'' "to count" (from {{ang}} ''[[tellan#Old English|tellan]]'') and {{enm}} ''[[rimen#Middle English|rimen]]'' "to count, enumerate" (from {{ang}} ''[[riman#Old English|rīman]]'').
 
 ====Noun====
 {{en-noun}}
