--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -28,6 +28,13 @@ Borrowed from {{etyl|la|fr}} {{term|mandatum}}, from {{term|mandare||to put in o
 
 ----
 
+==Polish==
+
+===Noun===
+{{pl-noun|m}}
+
+# [[mandate]]
+----
 ==Swedish==
 
 ===Noun===
