--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -32,6 +32,8 @@
 #: ''He '''speaks''' Mandarin fluently''.
 # {{transitive}} To [[utter]].
 #: ''I was so surprised that I couldn't '''speak''' a word.''
+#* '''1611''', ''[[w:Authorized King James Version|Authorized King James Version]]'' (Bible translation), [[w:Book of Jeremiah|Jeremiah]] 9:5:
+#*: And they will deceive every one his neighbour, and will not speak the truth: they have taught their tongue to '''speak''' lies, and weary themselves to commit iniquity.
 
 ====Synonyms====
 * [[articulate]]
