--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -257,7 +257,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 ** [[敲打]] (qiāodǎ) (percussion instruments)
 ** [[演奏]] (yǎnzòu) (any instrument)
 * Czech: {{t+|cs|hrát}}
-* Dutch: {{t+|nl|spelen}}
+* Dutch: {{t+|nl|spelen}}, {{t-|nl|bespelen}}
 * Finnish: {{t+|fi|soittaa}}
 * French: [[jouer]] de
 * Hebrew: {{t|he|ניגן|alt=ניגן (ב־)|tr=nigén (b'-)}}
