--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -224,6 +224,11 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 {{trans-mid}}
 {{trans-bottom}}
 
+{{trans-top|piece on string instruments}}
+* Dutch: [[kam]]
+{{trans-mid}}
+{{trans-bottom}}
+
 ===Etymology 2===
 Name of an older card game ''biritch'', probably {{etyl|ru}} - OED, or probably from {{etyl|tr}} {{term|bir|lang=tr}}-{{term|üç|lang=tr}}, "one-three". <ref>"bridge." *OED 2nd edition. 1989. (online)</ref><ref>[http://www.etymonline.com/index.php?term=bridge "bridge."] Online Etymology Dictionary. 2008.</ref>
 
