--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -225,7 +225,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 {{trans-bottom}}
 
 {{trans-top|piece on string instruments}}
-* Dutch: [[kam]]
+* Dutch: [[kam]] {{m}}
 {{trans-mid}}
 {{trans-bottom}}
 
