/* Derived terms */ + [[suck face]]; made section collapsible <suck#7614435>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -27,8 +27,13 @@ Old English ''[[sūcan]]''
 * (''to be poor at'') To [[rock]], to [[rule]]
 
 ====Derived terms====
+{{rel-top3|Terms derived from ''suck'' (verb)}}
 * [[sucker]]
+{{rel-mid3}}
+* [[suck face]]
+{{rel-mid3}}
 * [[suck up]]
+{{rel-bottom}}
 
 ====Related terms====
 * [[suckle]]
