t+bg:[[цена]] t+bg:[[загуби]] t+bg:[[струвам]] ([[WT:EDIT|Assisted]]) <cost#7625781>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -23,6 +23,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 
 ====Translations====
 {{trans-top|amount of money, time, etc.}}
+* Bulgarian: {{t|bg|цена|f|sc=Cyrl}}
 * [[Catalan]]: {{t+|ca|preu|m}}
 * [[Chamicuro]]: {{tø|ccc|iso'no}}
 * Chinese: {{zh-tsp|費用|费用|fèiyòng}}, {{t-|cmn|成本|tr=chéngběn|sc=Hani}}, {{zh-tsp|花費|花费|huāfèi}}
@@ -46,6 +47,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 {{trans-bottom}}
 
 {{trans-top|negative consequence or loss}}
+* Bulgarian: {{t|bg|загуби|p|sc=Cyrl}}
 * Chinese: {{zh-ts|代價|代价}} (dàijìa)
 * Czech: {{t+|cs|cena|f}}
 * Finnish: {{t+|fi|hinta}}
@@ -75,6 +77,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 ====Translations====
 {{trans-top|to incur a charge, a price}}
 * Arabic: {{t|ar|ساوى|tr=saawaa}}
+* Bulgarian: {{t|bg|струвам|sc=Cyrl}}
 * Chinese: {{zh-tsp|花費|花费|huāfèi}}
 * Czech: {{t+|cs|stát}}
 * Dutch: {{t+|nl|kosten}}
