--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -40,8 +40,8 @@
 [[Category:Fabrics]]
 [[Category:English adjectives ending in -en]]
 
-
 [[io:flaxen]]
+[[ml:flaxen]]
 [[te:flaxen]]
 [[vi:flaxen]]
 [[zh:flaxen]]
