--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -117,6 +117,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 [[io:vomit]]
 [[it:vomit]]
 [[kk:vomit]]
+[[li:vomit]]
 [[hu:vomit]]
 [[ml:vomit]]
 [[no:vomit]]
