iwiki +[[:li:count]] <count#7631603>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -194,6 +194,7 @@ From {{etyl|fro}} ''[[conte]]''
 [[io:count]]
 [[it:count]]
 [[kk:count]]
+[[li:count]]
 [[hu:count]]
 [[ml:count]]
 [[nl:count]]
