/* Translations */ <et cetera#7633081>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -32,7 +32,8 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 ====Translations====
 {{trans-top|and so on}}
 * Bulgarian: [[и така нататък]], [[и т.н.]]
-* Chinese: [[等]] (děng)
+* Chinese:
+*: Mandarin: {{t|zh|等|tr=děng|sc=Hani}}, {{t|zh|等等|tr=děngděng|sc=Hani}}
 * Czech: [[a tak dále]], [[atd.]]
 * Danish: [[og så videre]], {{t+|da|osv.}}
 * Dutch: {{t+|nl|enzovoort}}, {{t+|nl|enz.}}, {{t+|nl|enzovoorts}}
