--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -116,6 +116,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 [[ko:vomit]]
 [[io:vomit]]
 [[it:vomit]]
+[[kn:vomit]]
 [[kk:vomit]]
 [[li:vomit]]
 [[hu:vomit]]
