--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -10,20 +10,23 @@
 
 ====Translations====
 {{trans-top|bone marrow}}
+* Arabic: {{t|ar|نقي العظم|m|tr=niqy al-3aZm|sc=Arab}}
 * [[Catalan]]: {{t+|ca|bessó|m}}
 * Dutch: {{t+|nl|beenmerg|n}}
 * Esperanto: [[osta medolo]]
 * Finnish: {{t-|fi|luuydin}}
-* French: [[moelle osseuse]] {{f}}
+* French: [[moelle osseuse]] {{f}},  {{t|fr|moelle osseuse|f}}
 * German: {{t-|de|Knochenmark|n}}
 * Hungarian: {{t|hu|csontvelő}}
-* Indonesian: [[sumsum tulang]]
 {{trans-mid}}
-* Japanese: [[骨髄]] ([[こつずい]], kotsuzui)
+* Indonesian: [[sumsum tulang]]
+* Japanese: [[骨髄]] ([[こつずい]], kotsuzui),  {{t|ja|骨髄|tr=こつずい, kotsuzui|sc=Jpan}}
 * Latin: [[medulla ossium]]
+* Mandarin: {{t|zh|骨髓|tr=gǔsuǐ|sc=Hani}}
 * [[Pitjantjatjara]]: {{tø|pjt|nyuṉtjuṉ}}
 * Polish: [[szpik kostny]] {{m}}
 * Portuguese: {{t|pt|medula óssea|f}}
+* Russian: {{t|ru|костный мозг|m|tr=kóstnyj mozg|sc=Cyrl}}
 * Spanish: [[meollo]], [[tuétano]], [[médula]]
 * Swedish: [[benmärg]] {{c}}
 {{trans-bottom}}
