--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -15,7 +15,7 @@
 * Chinese:
 *: Mandarin: {{t|zh|骨髓|tr=gǔsuǐ|sc=Hani}}
 * Dutch: {{t+|nl|beenmerg|n}}
-* Esperanto: [[osta medolo]],  {{t|eo|osta medolo}}
+* Esperanto: {{t|eo|osta medolo}}
 * Finnish: {{t-|fi|luuydin}}
 * French: {{t|fr|moelle osseuse|f}},  {{t|fr|moelle|f}}
 * German: {{t-|de|Knochenmark|n}}
@@ -23,12 +23,12 @@
 * Hungarian: {{t|hu|csontvelő}}
 * Indonesian: [[sumsum tulang]]
 * Japanese: {{t|ja|骨髄|tr=こつずい, kotsuzui|sc=Jpan}}
-* Latin: [[medulla ossium]],  {{t|la|medulla ossium|f}}
+* Latin: {{t|la|medulla ossium|f}}
 * [[Pitjantjatjara]]: {{tø|pjt|nyuṉtjuṉ}}
-* Polish: [[szpik kostny]] {{m}},  {{t|pl|szpik kostny|m}}
+* Polish: {{t|pl|szpik kostny|m}}
 * Portuguese: {{t|pt|medula óssea|f}}
 * Russian: {{t|ru|костный мозг|m|tr=kóstnyj mozg|sc=Cyrl}}
-* Spanish: [[meollo]], [[tuétano]], [[médula]],  {{t|es|meollo|m}},  {{t|es|tuétano|m}},  {{t|es|médula|f}}
+* Spanish: {{t|es|meollo|m}},  {{t|es|tuétano|m}},  {{t|es|médula|f}}
 * Swedish: [[benmärg]] {{c}}
 {{trans-bottom}}
 
