t+fa:[[خزیدن]] ([[WT:EDIT|Assisted]]) <creep#7664884>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -30,6 +30,7 @@
 * Finnish: {{t-|fi|ryömintä}}, {{t+|fi|matelu}}
 {{trans-mid}}
 * Italian: {{t+|it|strisciare|m}}
+* Persian: {{t|fa|خزیدن|sc=fa-Arab}}
 * Russian: {{t|ru|ползание|g=n|tr=pólzanije}}
 {{trans-bottom}}
 
@@ -113,6 +114,7 @@
 * Hungarian: {{t+|hu|kúszik}},  {{t+|hu|mászik}}
 * Italian: {{t+|it|strisciare}}
 * Japanese: {{t-|ja|這う|tr=hau}}
+* Persian: {{t|fa|خزیدن|sc=fa-Arab}}
 * Portuguese: {{t+|pt|rastejar}}
 * Russian: {{t+|ru|ползать|tr=pólzat'}},  {{t+|ru|ползти|tr=polztí}}
 * Spanish: [[arrastrarse]], [[reptar]]
