t+fa:[[خنجر زدن]] ([[WT:EDIT|Assisted]]) <stab#7664935>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -32,6 +32,7 @@
 * Dutch: {{t+|nl|steek}}
 * Norwegian: {{t|no|stikk|n}}
 {{trans-mid}}
+* Persian: {{t|fa|خنجر زدن|sc=fa-Arab}}
 * Russian: {{t+|ru|удар|m}}
 {{trans-bottom}}
 
