t+pt:[[Ícone]] ([[WT:EDIT|Assisted]]) <icon#7670453>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -34,6 +34,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 {{trans-mid}}
 * Italian: {{t+|it|icona|f}}
 * Polish: {{t+|pl|ikona|f}}
+* Portuguese: {{t|pt|Ícone|m}}
 * Russian: {{t+|ru|икона|f|tr=ikóna}}
 * Serbian:
 *: Cyrillic: {{t+|sr|икона|f|sc=Cyrl}}
