t+pt:[[ícone]] ([[WT:EDIT|Assisted]]) <icon#7670476>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -100,6 +100,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * Italian: {{t+|it|icona|f}}
 * Japanese: {{t+|ja|アイコン|tr=aikon}}
 * Polish: {{t+|pl|ikona|f}}, [[ikonka]] {{f}}
+* Portuguese: {{t|pt|ícone|m}}
 * Russian: {{t|ru|иконка|f|tr=ikónka}}
 * Serbian:
 *: Cyrillic: {{t+|sr|икона|f|sc=Cyrl}}
