/* Noun */ fmt quotations a bit <felt#7677339>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -17,12 +17,12 @@ From {{etyl|ang}} ''[[felt]]''; akin to Dutch ''[[vilt]]'', German ''[[Filz]]'',
 {{en-noun|-}}
 
 # A [[cloth]] or stuff made of [[mat]]ted [[fibre]]s of [[wool]], or wool and [[fur]], [[full]]ed or wrought into a compact substance by rolling and pressure, with lees or size, without spinning or weaving.
-#:* It were a delicate stratagem to shoe A troop of horse with '''felt'''. &mdash; Shakespeare, ''King Lear, IV-vi''
-# A [[hat]] made of felt. &mdash; [[Thynne]]
+#* Shakespeare, ''King Lear'', act 4, scene 6:
+#*: It were a delicate stratagem to shoe A troop of horse with '''felt'''.
+# A [[hat]] made of felt.
 # {{obsolete}} A [[skin]] or [[hide]]; a [[fell]]; a [[pelt]].
-
-=====Quotations=====
-* To know whether sheep are sound or not, see that the '''felt''' be loose &mdash; John Mortimer ''The whole art of husbandry'' 1707
+#* '''1707''', John Mortimer, ''The whole art of husbandry'':
+#*: To know whether sheep are sound or not, see that the '''felt''' be loose.
 
 =====Translations=====
 {{trans-top|cloth made of matted fibres of wool}}
