--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -34,6 +34,7 @@ From {{etyl|ang}} {{term|felt|lang=ang}}; akin to {{etyl|nl|-}} {{term|vilt|lang
 * French: [[feutre]] {{m}}, [[feutrine]] {{f}}
 {{trans-mid}}
 * German: {{t+|de|Filz|n}}
+* Hebrew: {{t|he|לבד|tr=léved}}
 * Norwegian: {{t-|no|filt|m}}
 * Russian: {{t+|ru|фетр|m|sc=Cyrl}}
 * Spanish: {{t-|es|fieltro|m}}
