/* Translations */ lemmatize Hebrew <find#7681037>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -53,7 +53,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * French: {{t+|fr|trouver}}
 * Georgian: {{tø|ka|მიგნება|tr=migneba|sc=Geor}}
 * German: {{t+|de|finden}}
-* Hebrew: {{t|he|לימצוא|tr=limtzo}}
+* Hebrew: {{t|he|מצא|tr=matzá}}
 * Icelandic: {{t+|is|finna}}
 {{trans-mid}}
 * Irish: {{t+|ga|faigh|xs=Irish}}
@@ -78,7 +78,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Danish: [[finde]], [[udpege]]
 * Dutch: {{t+|nl|vinden}}, {{t+|nl|ontdekken}}
 * Finnish: {{t+|fi|osoittaa}}
-* Hebrew: {{t-|he|להצביע|tr=lehatzbi'a}}
+* Hebrew: {{t|he|הצביע|tr=hitzbía}}
 * Japanese: [[指摘]]する (してきする, shiteki-suru)
 {{trans-mid}}
 * Latin: {{t-|la|designare}}
@@ -93,7 +93,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Danish: [[finde]]
 * Dutch: [[vinden]], [[van mening zijn]] dat
 * Finnish: {{t+|fi|pitää}}
-* Hebrew: {{t|he|לימצוא|tr=limtzo}}
+* Hebrew: {{t|he|מצא|tr=matzá}}
 {{trans-mid}}
 * Latin: {{t-|la|decernere}}
 * Norwegian: {{t+|no|finne}}
