t+tta:[[tuhangrua]] ([[WT:EDIT|Assisted]]) <thunder#7685380>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -74,6 +74,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * [[Tamil]]: {{t-|ta|Idi|sc=Taml|xs=Tamil}}
 * [[Taos]]: [[nąłàcit’ə́otuna]]
 * Thai: {{Thai|[[สายฟ้า]]}} (săaifáa)
+* [[Tutelo]]: {{tø|tta|tuhangrua}}
 * [[West Frisian]]: {{t|fy|tonger|xs=West Frisian}}
 {{trans-bottom}}
 
