--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -174,7 +174,7 @@
 * [[cum]]
 
 ===Preposition===
-'''come'''
+{{en-prep}}
 
 # when an event has occurred or a time has arrived
 #: ''Leave it to settle for about three months and, '''come''' Christmas time, you'll have a delicious concoctions to offer your guests.''
