--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -24,6 +24,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 # {{uncountable}} The extent to which a part of a mechanism can move freely.
 #: ''No wonder the fanbelt is slipping: there’s too much '''play''' in it.''
 #: ''Too much '''play''' in a steering wheel may be dangerous.''
+# {{uncountable|informal}} [[sexual|Sexual]] [[role-playing]] (as in {{term|ageplay}}, {{term|bloodplay}}, {{term|pissplay}}).
 
 =====Synonyms=====
 * {{sense|literary composition}} [[drama]]
