/* Translations */ correct, lemmatize, and fmt Hebrew <cut#7687681>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -34,7 +34,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 {{trans-mid}}
 * French: {{t+|fr|coupé}}, {{t+|fr|coupée}}, {{t+|fr|coupés}}, {{t+|fr|coupées}}
 * German: {{t+|de|geschnitten}}
-* Hebrew: [[חתוך]] (khatukh) {{m}}, [[חתוכה]] (khatukha) {{f}}
+* Hebrew: {{t|he|חתוך|tr=khatúkh}}
 * Swedish: [[klippt]], [[skuren]]
 {{trans-bottom}}
 
@@ -121,7 +121,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Finnish: {{t+|fi|haava}}, {{t-|fi|viilto}}, {{t-|fi|viiltohaava}}
 * German: {{t+|de|Schnitt|m}}
 {{trans-mid}}
-* Hebrew: [[חתך]] (khetekh) {{m}}
+* Hebrew: {{t|he|חתך|m|tr=khétekh}}
 * Italian: {{t+|it|taglio|m}}, {{t+|it|incisione|f}}
 * Kurdish: {{t+|ku|برین|sc=ku-Arab}}
 * Swedish: {{t+|sv|skärsår|n}}
@@ -132,7 +132,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Finnish: [[leikkaus]], [[viilto]], [[sivallus]]
 * German: {{t+|de|schneiden|m}}
 {{trans-mid}}
-* Hebrew: [[חיתוך]] (khitukh) {{m}}
+* Hebrew: {{t|he|חיתוך|m|tr=khitúkh}}
 * Italian: {{t+|it|taglio|m}}
 * Swedish: {{t+|sv|snitt|n}}
 {{trans-bottom}}
@@ -185,7 +185,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Dutch: {{t+|nl|stuk|n}}
 * Finnish: {{t+|fi|pala}}
 {{trans-mid}}
-* Hebrew: [[חתיכה]] (khatikha) {{f}}
+* Hebrew: {{t|he|חתיכה|f|tr=khatikhá}}
 * Italian: {{t+|it|taglio|m}}, {{t+|it|pezzo|m}}
 {{trans-bottom}}
 
@@ -268,7 +268,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * French: {{t+|fr|couper}},  {{t|fr|inciser}}
 * [[Galician]]: {{t+|gl|cortar|xs=Galician}}
 * German: {{t+|de|einschneiden}}
-* Hebrew: [[לחתוך]] (lakhtokh) (''transitive - to cut something intentionally''); [[להיחתך]] (lehikhatekh) (''intransitive - to be cut unintentionally'')
+* Hebrew: {{t|he|חתך|tr=khatákh}}
 {{trans-mid}}
 * Italian: {{t+|it|tagliare}},  {{t+|it|incidere}}
 * Japanese: {{t+|ja|切る}} ({{t+|ja|きる}}, kiru)
@@ -296,7 +296,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * [[Galician]]: {{t+|gl|cortar|xs=Galician}}
 * German: {{t+|de|schneiden}}
 {{trans-mid}}
-* Hebrew: [[לחתוך]] (lakhtokh)
+* Hebrew: {{t|he|חתך|tr=khatákh}}
 * Irish: {{t-|ga|bain|xs=Irish}} {{i|grass, hay, etc.}}
 * Italian: {{t+|it|tagliare}}
 * Japanese: {{t+|ja|切る}} ({{t+|ja|きる}}, kiru)
@@ -380,7 +380,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Danish: [[pjække]] fra
 * Finnish: {{t+|fi|lintsata}}
 * French: {{t+|fr|sécher}}
-* Hebrew: [[להבריז]] (lehavryz)
+* Hebrew: {{t|he|הבריז|tr=hivríz}}
 {{trans-mid}}
 * Japanese: {{t+|ja|サボる}} ({{t+|ja|さぼる}}, saboru)
 * Portuguese: {{t+|pt|matar}}, {{t+|pt|faltar}}
@@ -390,7 +390,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 {{trans-top|to change direction suddenly}}
 * Finnish: {{t-|fi|mutkitella}}
 {{trans-mid}}
-* Hebrew: [[לחתוך]] (lakhtokh)
+* Hebrew: {{t|he|חתך|tr=khatákh}}
 {{trans-bottom}}
 
 {{trans-top|to divide a pack of playing cards}}
