--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -11,7 +11,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 ==={{abbreviation}}===
 '''i.e.'''
 
-# {{context|[[initialism]]}} That is
+# {{context|[[initialism]]}} That is; in other words; that is to say.
 #: ''The three U.S. states on the west coast ('''i.e.''', Washington, Oregon, and California) have favorable climates.''
 
 ====Usage notes====
