t+cs:[[kobylka]] t-balance ([[WT:EDIT|Assisted]]) <bridge#7696193>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -225,8 +225,9 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 {{trans-bottom}}
 
 {{trans-top|piece on string instruments}}
-* Dutch: {{t+|nl|kam|m}}
+* Czech: {{t|cs|kobylka|f}}
 {{trans-mid}}
+* Dutch: {{t+|nl|kam|m}}
 {{trans-bottom}}
 
 ===Etymology 2===
