--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -17,7 +17,7 @@
 ====Translations====
 {{trans-top|Germany}}
 * [[Afrikaans]]: [[Duitsland]]
-* Arabic: {{t+|ar|المانيا|f|tr=Almánya}}
+* Arabic: {{t+|ar|ألمانيا|f|tr=Almánya}}
 * Armenian: [[Գերմանիա]] (Germania)
 * [[Azeri]]: {{t+|az|Almaniya|xs=Azeri}}
 * Belarusian: {{t|be|Германія|f|tr=Hermánija|xs=Belarusian}}
