--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -106,6 +106,26 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 [[Category:English simple past forms]]
 [[Category:English verbs which are their own past participle]]
 
+----
+==Old English==
+
+===Etymology===
+{{proto|Germanic|kus(t)-||lang=ang}} from {{proto|Indo-European|geus-|to choose|lang=ang}}. Akin to Old Saxon ''[[koston|kostōn]]'' "to try, tempt", O.H.G. ''[[koston|kostōn]]'' "to taste, test, try by tasting" (Ger ''[[kosten]]''), Icel. ''[[kosta]]'' "to try, tempt", Gothic ''kustus'' "test", Old English {{term|cost||option, possibility; manner, condition|lang=ang}}, Old English {{term|cystan||to spend, get the value of, procure|lang=ang}}, Old English {{term|cyst||proof, test, trial; choice|lang=ang}}, {{term|ceosan|ċēosan|to choose|lang=ang}}. More at [[choose]]
+
+===Noun===
+{{infl|ang|noun|g=m}}
+
+# [[option]], [[choice]]; [[possibility]]
+# [[condition]], [[manner]], [[way]]
+#: ''þæs costes þe (on the condition that)''
+
+===Adjective===
+{{infl|ang|adjective}}
+
+# [[chosen]], [[choice]]
+# [[tried]], [[proven]]; [[excellent]]
+
+
 [[ca:cost]]
 [[et:cost]]
 [[el:cost]]
