--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -3,7 +3,7 @@
 {{rank|week|stone|tree|781|cost|value|cast|speaking}}
 
 ===Etymology===
-From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
+From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coûter]]'').
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/kɒst/}}
