--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -162,6 +162,7 @@ From {{etyl|la}} ''[[substantia]]'', '''substance''' or '''essence''', noun form
 [[id:substance]]
 [[it:substance]]
 [[hu:substance]]
+[[ml:substance]]
 [[nl:substance]]
 [[ja:substance]]
 [[pl:substance]]
