--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -43,6 +43,7 @@ From {{etyl|fro}} ''[[branche]]''.
 * Dutch: {{t+|nl|tak}}
 * Finnish: {{t+|fi|oksa}}
 * French: {{t+|fr|branche}}, {{t+|fr|rameau}}
+* Georgian: {{t|ka|შტო|tr=što|sc=Geor}}
 * German: {{t+|de|Ast|m}}, {{t+|de|Zweig|m}}
 * Hebrew: {{t-|he|ענף|m|tr=anaf}}
 * Hungarian: {{t+|hu|ág}}
