iwiki +[[:ml:stomach]] <stomach#7761783>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -150,6 +150,7 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 [[lo:stomach]]
 [[lt:stomach]]
 [[hu:stomach]]
+[[ml:stomach]]
 [[nl:stomach]]
 [[ja:stomach]]
 [[km:stomach]]
