/* Derived terms */ <creep#7765306>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -92,7 +92,7 @@
 
 ====Derived terms====
 * [[creep up on]]
-* [[creepy]]
+* [[creepy]] / [[creepy-crawly]]
 * [[decrepit]]
 * [[function creep]]
 * [[give someone the creeps]]
