iwiki +[[:kn:come]] <come#7780262>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -279,6 +279,7 @@ Latin [[comede]] (imperative), [[comedit]] (present).
 [[hy:come]]
 [[io:come]]
 [[it:come]]
+[[kn:come]]
 [[kk:come]]
 [[ku:come]]
 [[lo:come]]
