--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -99,7 +99,7 @@
 * Swedish: {{t+|sv|dra}}, {{t+|sv|draga}}
 * [[Telugu]]: [[లాగు]] (laagu)
 * Turkish: {{t+|tr|çekmek}}
-* [[West Frisian]]: {{t|fy|trekke}}
+* [[West Frisian]]: {{t|fy|trekke}},  {{t|fy|lûke}}
 {{trans-bottom}}
 
 {{trans-top|slang: persuade (a person) to have sex with one}}
