t+el:[[κεραυνός]] ([[WT:EDIT|Assisted]]) <thunder#7795334>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -50,6 +50,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * French: {{t+|fr|tonnerre|m}}
 * Georgian: {{t|ka|ქუხილი|tr=kʻuxili|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Donner|m}}
+* Greek: {{t|el|κεραυνός|m|tr=keravnós|sc=Grek}}
 * [[Haitian Creole]]: {{tø|ht|loray}}
 * Hungarian: {{t+|hu|mennydörgés}}, {{t-|hu|égzengés}}
 * Italian: {{t-|it|tuono|m}}
@@ -82,6 +83,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * Czech: [[zahřmění]] {{n}}, [[hromová rána]] {{f}}, [[hřmění]] {{n}}
 * Finnish: {{t-|fi|jyrinä}}
 * German: {{t-|de|Donnern|n}}
+* Greek: {{t|el|κεραυνός|m|tr=keravnós|sc=Grek}}
 * Hungarian: {{t+|hu|dörgés}}
 * Japanese: {{t+|ja|雷鳴|tr=raimei|sc=Jpan}}
 * Polish: {{t+|pl|grzmot|m}}
