--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -127,6 +127,7 @@
 {{trans-mid}}
 * Polish: [[lewoburtowy]] {{m}}
 * Portuguese: [[portuário]]
+* Spanish: [[a babor]] {{mf}}
 * Swahili: {{t|sw|mabandari|xs=Swahili}}
 * Swedish: [[babord]], [[babord]]-
 {{trans-bottom}}
