t+ro:[[ de ex.]] t+ro:[[e.g.]] ([[WT:EDIT|Assisted]]) <e.g.#7806794>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -58,7 +58,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * Persian: [[براي مثال]]
 * Polish: [[np.]] {{i|[[na]] [[przykład]]}}
 * Portuguese: [[p. ex.]], [[ex.]] {{i|[[por exemplo]]}}
-* Romanian: {{t-|ro|de exemplu}}
+* Romanian: {{t-|ro|de exemplu}},  {{t|ro| de ex.}},  {{t|ro|e.g.}}
 * Russian: [[напр.]] {{i|[[например]]}}
 * [[Scottish Gaelic]]: {{t-|gd|me|xs=Scottish Gaelic}}
 * Serbian:
