t+nl:[[aftakken]] ([[WT:EDIT|Assisted]]) <branch#7807001>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -161,6 +161,7 @@ From {{etyl|fro}} ''[[branche]]''.
 {{trans-top|to arise from the trunk or a larger branch of a tree}}
 * Bulgarian: {{t|bg|разклонявам се}}
 * Czech: [[větvit]] se
+* Dutch: {{t|nl|aftakken}}
 * German: [[abzweigen]]
 {{trans-mid}}
 * Polish: {{t|pl|rozgałęziać się}}
