--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -25,6 +25,9 @@ Old English ''[[pleġa]]'', ''plæġa''
 #: ''No wonder the fanbelt is slipping: there’s too much '''play''' in it.''
 #: ''Too much '''play''' in a steering wheel may be dangerous.''
 # {{uncountable|informal}} [[sexual|Sexual]] [[role-playing]] (as in {{term|ageplay}}, {{term|bloodplay}}, {{term|pissplay}}).
+#* '''1996''', Sabrina P Ramet, ''Gender reversals and gender cultures''
+#*: The rarity of male domination in fantasy '''play''' is readily explained.
+#* '''1996''', "toptigger", ''Palm Springs M seeks sane F 4 safe bdsm '''play''''' (on Internet newsgroup ''alt.personals.spanking.punishment'')
 
 =====Synonyms=====
 * {{sense|literary composition}} [[drama]]
