--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from {{etyl|fro|en}} {{term|cenit|lang=fro}} and/or {{etyl|la|en}} {{term|cenit|lang=la}} from {{etyl|ar|en}} {{term|سمت|السَّمْت|direction of heads|tr=as-samt|lang=ar|sc=Arab}}.
+From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from {{etyl|fro|en}} {{term|cenit|lang=fro}} and/or {{etyl|la|en}} {{term|cenit|lang=la}}, a shoddy transliteration of {{etyl|ar|en}} {{term|سمت||direction, path|tr=samt|lang=ar|sc=Arab}} which is in itself a weak abbreviation of {{term|سمت الرأس||direction of the head|tr=samt ar-ra's|lang=ar|sc=Arab}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈzɛn.ɪθ/}}
