--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -62,7 +62,7 @@
 * [[Catalan]]: [[bell]], [[formós]],  {{t+|ca|bonic|m}},  {{t|ca|bonica|f}}
 * [[Chamicuro]]: {{tø|ccc|pya'c̈homa}}, {{tø|ccc|pewa puti'na}}
 * Chinese: [[漂亮]] (piàoliàng), [[美]] (měi)
-* Danish: [[smuk]] ''en'', [[smukt]] ''et'', [[smukke]] {{p}}
+* Danish: {{t+|da|smuk}}
 * Dutch: {{t+|nl|mooi}}
 * [[Egyptian]]: {{tø|egy|nfr|sc=Egyp}}
 *: <hiero>nfr-f:r-A40</hiero>
