--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -73,6 +73,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 * Estonian: {{t-|et|okse}}
 * Finnish: {{t+|fi|oksennus}}
 * French: {{t|fr|vomi|m}}
+* [[Galician]]: {{t+|gl|vómito|m|xs=Galician}}
 * Greek: {{t+|el|εμετός|m}}, {{t+|el|έμεσμα|n}}
 * Hebrew: {{he-translation|קא|kei}}
 * Hungarian: {{t|hu|hányás}},  {{t-|hu|hányadék}}
