iwiki +[[:hr:stomach]] <stomach#7879969>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -141,6 +141,7 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 [[ko:stomach]]
 [[hy:stomach]]
 [[hi:stomach]]
+[[hr:stomach]]
 [[io:stomach]]
 [[id:stomach]]
 [[it:stomach]]
