t+ru:[[колоть]] t+uk:[[критика]] t+ru:[[критика]] t+uk:[[спроба]] t+ru:[[прокалывать]] t+ru:[[ранить]] ([[WT:EDIT|Assisted]]) <stab#7885058>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -33,7 +33,7 @@
 * Norwegian: {{t|no|stikk|n}}
 {{trans-mid}}
 * Persian: {{t|fa|خنجر زدن|sc=fa-Arab}}
-* Russian: {{t+|ru|удар|m}}
+* Russian: {{t+|ru|удар|m}},  {{t|ru|колоть|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|Wound made by stabbing}}
@@ -53,12 +53,15 @@
 * Dutch: {{t-|nl|poging}}
 {{trans-mid}}
 * Russian: {{t+|ru|попытка|f}}
+* Ukrainian: {{t|uk|спроба|f|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|Criticism}}
 * Dutch: {{t-|nl|kritiek}},{{t+|nl|aanval}}
 {{trans-mid}}
 * Norwegian: {{t|no|stikk|n}}
+* Russian: {{t|ru|критика|f|sc=Cyrl}}
+* Ukrainian: {{t|uk|критика|f|sc=Cyrl}}
 {{trans-bottom}}
 
 ===Verb===
@@ -95,7 +98,7 @@
 * Portuguese: {{t|pt|apunhalar}}, {{t-|pt|esfaquear}}
 * Romanian: {{t|ro|împunge}}, {{t|ro|a da o lovitură de cuţit}}
 * [[Romansch]]: {{t|rm|stilettar|xs=Romansch}}, {{t|rm|cuntellar|xs=Romansch}}
-* Russian: {{t|ru|закалывать|tr=zakályvat’}}
+* Russian: {{t|ru|закалывать|tr=zakályvat’}},  {{t|ru|прокалывать|sc=Cyrl}}
 * [[Santali]]: {{tø|sat|ᱨᱳᱜ|tr=rok'|sc=Olck}}
 * Serbian: {{t-|sr|bosti}}
 * Spanish: {{t+|es|apuñalar}}, {{t+|es|acuchilllar}}
@@ -120,6 +123,7 @@
 * Hungarian: {{t|hu|nyilallik}}
 {{trans-mid}}
 * Norwegian: {{t|no|stikke}}
+* Russian: {{t|ru|ранить|sc=Cyrl}}
 {{trans-bottom}}
 
 ===Anagrams===
