--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -186,6 +186,11 @@ From {{etyl|fro}} ''[[branche]]'', from [[Vulgar Latin]] ''branca'' 'paw', possi
 * Polish: {{t|pl|rozgałęziać się}}
 {{trans-bottom}}
 
+{{trans-top|to branch off}}
+* Dutch: [[afbuigen]]
+{{trans-mid}}
+{{trans-bottom}}
+
 {{checktrans-top}}
 * {{ttbc|Telugu}}: [[చీలు]] (cheelu), [[చీలిపోవు]] (cheelipOvu)
 {{checktrans-mid}}
