--- a/en/坪/坪.13037.wikitext
+++ b/en/坪/坪.13037.wikitext
@@ -35,8 +35,9 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=평|rv=pyeong|mr=p'yŏng}}
+{{ko-hanja|hangeul=평|rv=[[pyeong]]|mr=p'yŏng}}
 
+# [[pyeong]], a traditional unit of measurement
 # {{defn|Korean}}
 
 ----
