--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -26,6 +26,7 @@
 
 ====Translations====
 {{trans-top|movement of something that creeps}}
+* Bulgarian: {{t|bg|пълзене|sc=Cyrl}}
 * Dutch: {{t-|nl|kruip|m}}
 * Finnish: {{t-|fi|ryömintä}}, {{t+|fi|matelu}}
 * Italian: {{t+|it|strisciare|m}}
@@ -35,6 +36,7 @@
 {{trans-bottom}}
 
 {{trans-top|small gradual change in a measure}}
+* Bulgarian: {{t|bg|пълзене|n|sc=Cyrl}}
 * Finnish: {{t-|fi|ryömintä}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -56,6 +58,7 @@
 {{trans-bottom}}
 
 {{trans-top|imperceptible downslope movement of surface}}
+* Bulgarian: {{t|bg|свличане|sc=Cyrl}}
 * Italian: {{t-|it|scollamento}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -101,6 +104,7 @@
 ====Translations====
 {{trans-top|move slowly with the abdomen close to the ground}}
 * Arabic: {{t|ar|زحف|tr=zaHafa}}
+* Bulgarian: {{t|bg|пълзя|sc=Cyrl}},  {{t|bg|лазя|sc=Cyrl}}
 * [[Catalan]]: [[arrossegar-se]]
 * Chinese: {{t-|cmn|爬|tr=pá|sc=Hani}}, {{t-|cmn|匍|tr=pú|sc=Hani}}, {{t|cmn|爬行|tr=páxíng|sc=Hani}},  {{t|cmn|匍匐|tr=púfú|sc=Hani}},  {{t|cmn|蛇行|tr=shéxíng|sc=Hani}}
 * Czech: [[plazit]] se
@@ -123,6 +127,7 @@
 {{trans-bottom}}
 
 {{trans-top|grow across a surface rather than upwards}}
+* Bulgarian: {{t|bg|пълзя|sc=Cyrl}},  {{t|bg|стеля се|sc=Cyrl}}
 * Danish: {{t-|da|krybe}}
 * Dutch: {{t+|nl|kruipen}}
 * Finnish: {{t+|fi|ryömiä}}
