--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -175,6 +175,7 @@ From {{etyl|de|sv}} {{term|Stab|lang=de}}.<ref>{{cite web |last=Hellquist |first
 [[el:stab]]
 [[es:stab]]
 [[fr:stab]]
+[[hr:stab]]
 [[io:stab]]
 [[it:stab]]
 [[li:stab]]
