iwiki +[[:kn:fight]] <fight#7925837>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -367,6 +367,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 [[hr:fight]]
 [[io:fight]]
 [[it:fight]]
+[[kn:fight]]
 [[kk:fight]]
 [[sw:fight]]
 [[ku:fight]]
