iwiki +[[:hr:curtain]] <curtain#7931112>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -102,6 +102,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 [[fa:curtain]]
 [[fr:curtain]]
 [[hy:curtain]]
+[[hr:curtain]]
 [[io:curtain]]
 [[id:curtain]]
 [[it:curtain]]
