--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -101,7 +101,7 @@
 * Russian: {{t|ru|закалывать|tr=zakályvat’}},  {{t|ru|прокалывать}}
 * [[Santali]]: {{tø|sat|ᱨᱳᱜ|tr=rok'|sc=Olck}}
 * Serbian: {{t-|sr|bosti}}
-* Spanish: {{t+|es|apuñalar}}, {{t+|es|acuchilllar}}
+* Spanish: {{t+|es|apuñalar}}, {{t+|es|acuchillar}}
 * {{trreq|Swedish}}
 {{trans-bottom}}
 
