--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -176,6 +176,7 @@ From the [[Francs]], a people.
 [[zh-min-nan:France]]
 [[bg:France]]
 [[ca:France]]
+[[cs:France]]
 [[de:France]]
 [[et:France]]
 [[el:France]]
