t+mn:[[сонгох]] ([[WT:EDIT|Assisted]]) <choose#7940937>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -62,7 +62,7 @@
 * Latvian: [[izvēlēties]]
 * {{trreq|Lithuanian}}
 * Maltese: {{t+|mt|ħatar|xs=Maltese}}, {{t+|mt|talla'|xs=Maltese}}
-* {{trreq|Mongolian}}
+* Mongolian: {{t|mn|сонгох|tr=songoh|sc=Cyrl}}
 * Persian: {{t|fa|برگزیدن|xs=Persian}}
 * Polish: {{t+|pl|wybierać}}, {{t+|pl|wybrać}}
 * Portuguese: {{t+|pt|escolher}}
