--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -95,20 +95,21 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 =====Translations=====
 {{trans-top|writing tool}}
-* Arabic: {{Arab|[[قلم]]}} (qálam) {{m}}, {{Arab|[[قلم حبر]]}} (qálam ħebr) {{m}},  {{t|ar|قلم|m|tr=qálam|sc=Arab}},  {{t|ar|قلم حبر|m|tr=qálam Hibr|sc=Arab}}
+* Arabic: {{t|ar|قلم|m|tr=qálam|sc=Arab}},  {{t|ar|قلم حبر|m|tr=qálam Hibr|sc=Arab}}
 *: Morocco: {{tø|ary|ستيلو|tr=stīlū|sc=Arab}}
-* Armenian: [[գրիչ]] (grič),  {{t|hy|գրիչ|tr=grič|sc=Armn}}
+* Armenian: {{t|hy|գրիչ|tr=grič|sc=Armn}}
 * Bengali: {{t|bn|কলম |sc=Beng|xs=Bengali}},  {{t|bn|লিখনী |sc=Beng|xs=Bengali}}
 * Bulgarian: {{t|bg|писалка|tr=pisalka}}
-* Chinese: [[鋼筆]], [[钢笔]] (gāngbǐ), [[筆]], [[笔]] (bǐ), [[圓珠筆]], [[圆珠笔]] (yuánzhūbǐ)
+* Chinese:
+*: Mandarin: {{t|zh|鋼筆|sc=Hani}},  {{t|zh|鋼筆|sc=Hani}},  {{t|zh|钢笔|tr=gāngbǐ|sc=Hani}},  {{t|zh|筆|sc=Hani}},  {{t|zh|笔|tr=bǐ|sc=Hani}},  {{t|zh|圓珠筆|sc=Hani}},  {{t|zh|圆珠笔|tr=yuánzhūbǐ|sc=Hani}}
 * Croatian: {{t-|hr|pero|n}}, {{t-|hr|kemijska olovka|f}}
 * Dutch: {{t+|nl|pen|f}}
 * Esperanto: {{t+|eo|plumo|xs=Esperanto}}
 * Finnish: [[kynä]], [[mustekynä]]
 * French: {{t+|fr|plume|f}}, {{t+|fr|stylo|m}}
-* German: [[Füllhalter]] {{m}}, [[Stift]] {{m}},  {{t|de|Kugelschreiber|m}},  {{t|de|Stift|m}},  {{t|de|Federhalter|m}},  {{t|de|Füllhalter|m}}
+* German: {{t|de|Kugelschreiber|m}},  {{t|de|Stift|m}},  {{t|de|Federhalter|m}},  {{t|de|Füllhalter|m}}
 * Greek: {{t|el|στιλό|n|tr=stiló}},  {{t|el|στιλογράφος|m|tr=stilográfos}},  {{t|el|πένα|f|tr=péna}},  {{t+|el|γραφίδα|f|tr=grafíδa}}
-* Hebrew: [[עט|עֵט]] (et) {{m}},  {{t|he|עט|m|tr=et|alt=עֵט|sc=Hebr}}
+* Hebrew: {{t|he|עט|m|tr=et|alt=עֵט|sc=Hebr}}
 * Hindi: {{t|hi|क़लम|tr=qalam|sc=Deva}}
 * Hungarian: {{t+|hu|toll}}
 * Icelandic: {{t+|is|penni|m}}
@@ -117,13 +118,12 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * Irish: {{t+|ga|peann|m|xs=Irish}}
 {{trans-mid}}
 * Italian: {{t+|it|penna|f}}
-* Japanese: [[ペン]] (pen),  {{t|ja|ペン|tr=pen|sc=Jpan}}
+* Japanese: {{t|ja|ペン|tr=pen|sc=Jpan}}
 * [[Kikuyu]]: {{tø|ki|karamu}}
-* Korean: [[펜]] (pen),  {{t|ko|펜|tr=pen|sc=Kore}}
+* Korean: {{t|ko|펜|tr=pen|sc=Kore}}
 * Kurdish: {{ku-Arab|[[پێنووس]]}}
 * [[Luhya]]: {{tø|luy|ekalamu}}
 * [[Macedonian]]: {{t-|mk|пенкало|n|tr=pénkalo}}
-* Mandarin: {{t|zh|鋼筆|sc=Hani}},  {{t|zh|鋼筆|sc=Hani}},  {{t|zh|钢笔|tr=gāngbǐ|sc=Hani}},  {{t|zh|筆|sc=Hani}},  {{t|zh|笔|tr=bǐ|sc=Hani}},  {{t|zh|圓珠筆|sc=Hani}},  {{t|zh|圆珠笔|tr=yuánzhūbǐ|sc=Hani}}
 * [[Marathi]]: {{t|mr|लेखणी|sc=Deva|xs=Marathi}}
 * [[Meru]]: {{tø|mer|karamu}}
 * Norwegian: {{t+|no|penn|m}}
