--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -127,7 +127,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * [[Marathi]]: {{t|mr|लेखणी|sc=Deva|xs=Marathi}}
 * [[Meru]]: {{tø|mer|karamu}}
 * Norwegian: {{t+|no|penn|m}}
-* Persian: {{fa-Arab|[[قلم]]}} (ghalam),  {{t|fa|قلم|tr=qalam|sc=fa-Arab}}
+* Persian: {{t|fa|قلم|tr=qalam|sc=fa-Arab}}
 * Polish: {{t+|pl|pióro|n}}, {{t+|pl|długopis|m}}
 * Portuguese: {{t+|pt|caneta|f}}
 * Russian: {{t+|ru|ручка|f}} (rúčka), {{t+|ru|авторучка|f}} (avtorúčka), {{t+|ru|перо|n}} (peró)
