t+ja:[[ボールペン]] ([[WT:EDIT|Assisted]]) <pen#7960903>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -118,7 +118,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * Irish: {{t+|ga|peann|m|xs=Irish}}
 {{trans-mid}}
 * Italian: {{t+|it|penna|f}}
-* Japanese: {{t|ja|ペン|tr=pen|sc=Jpan}}
+* Japanese: {{t|ja|ペン|tr=pen|sc=Jpan}},  {{t|ja|ボールペン|tr=bōrupen|sc=Jpan}}
 * [[Kikuyu]]: {{tø|ki|karamu}}
 * Korean: {{t|ko|펜|tr=pen|sc=Kore}}
 * Kurdish: {{ku-Arab|[[پێنووس]]}}
