--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -28,7 +28,7 @@
 # {{defn|Japanese}}
 
 ====Readings====
-* {{ja-readings|on=[[じゅん]] (jun), [[しゅん]] (shun)|kun=[[あまねく]] (amaneku)}}
+* {{ja-readings|on=[[じゅん]] (jun), [[しゅん]] (shun)}}
 
 ----
 
