--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -33,6 +33,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * Arabic: [[على سبيل المثال]]
 * Armenian: {{t|hy|օր.|tr=òr.}} {{i|[[օրինակ]]}}
 * Bosnian: {{t-|bs|npr.}} {{i|[[na]] [[primjer]]}}
+* Bulgarian: [[напр.]]
 * [[Catalan]]: [[p. ex.]] [[per exemple]]
 * Chinese: [[例如]] (li4 ru2)
 * Czech: {{t+|cs|např.}}
