t+sq:[[Jugosllavia]] ([[WT:EDIT|Assisted]]) <Yugoslavia#8001641>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -14,6 +14,7 @@ From {{etyl|sh|en}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land
 
 ====Translations====
 {{trans-top|Former country in the Balkans}}
+* Albanian: {{t|sq|Jugosllavia}}
 * Arabic: {{Arab|[[يوغوسلافيا]]}} (yuğuslāfiya) {{f}}
 * Armenian: [[Հարավսլավիա]] (Haravslavia)
 * Bosnian: {{t-|bs|Jugoslavija|f}}
