--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -256,6 +256,7 @@ From {{etyl|ang}} {{term|butere|lang=ang}}, from West Germanic, from Latin {{ter
 
 # {{transitive}} To [[spread]] butter on.
 #: '''''Butter''' the toast.''
+# To move one's weight backwards or forwards onto the tips or tails of one's skis or snowboard so only the tip or tail is in contact with the snow.
 
 ====Derived terms====
 * [[buttered]]<!--adjective-->
