--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -60,6 +60,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 ====Translations====
 {{trans-top|gentle bend}}
 * [[Afrikaans]]: [[kurwe]]
+* Bulgarian: {{t|bg|извивка|f|sc=Cyrl}}
 * [[Catalan]]: revolt, {{m}}
 * Dutch: [[curve]] {{f}}, [[kromming]] {{f}}, [[bocht]] {{m}} (''road'')
 * Esperanto: [[kurbo]], [[kurbiĝo]], [[sinuo]], [[ĝirejo]], [[vojturno]] (''road'')
@@ -80,6 +81,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 
 {{trans-top|geometry: one-dimensional figure}}
 * [[Afrikaans]]: [[kurwe]]
+* Bulgarian: {{t|bg|крива|f|sc=Cyrl}}
 * [[Catalan]]: corba, f
 * Czech: {{t-|cs|křivka|f}}
 * Dutch: {{t+|nl|curve|f}}, {{t-|nl|kromme|f}}
@@ -113,6 +115,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-top|informal: attractive shape of a woman's body}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
 * [[Afrikaans]]: [[kurwe]]
+* Bulgarian: {{t|bg|извивки|p|sc=Cyrl}}
 * [[Catalan]]: [[corbes]] {{f|p}}
 * Dutch: [[rondingen]] {{m|p}}, [[figuur]] {{f}}
 * Finnish: [[kurvi]] (''usually in plural'' kurvit),
@@ -139,6 +142,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 ====Translations====
 
 {{trans-top|bend, crook}}
+* Bulgarian: {{t|bg|извивам|sc=Cyrl}},  {{t|bg|изкривявам|sc=Cyrl}}
 * Dutch: [[krommen]], [[plooien]] (''pipe''), [[buigen]]
 * Finnish: {{t-|fi|käyristää}}
 * Irish: [[cuar]]
@@ -155,6 +159,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-bottom}}
 
 {{trans-top|bend or turn gradually from a given direction}}
+* Bulgarian: {{t|bg|извивам се|sc=Cyrl}}
 * Dutch: {{t+|nl|afbuigen}}
 * Finnish: {{t-|fi|kaartaa}}
 * Irish: [[cuar]]
