iwiki +[[:eu:libre]] <libre#8030209>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -147,6 +147,7 @@ From {{etyl|la|es}} {{term|liber|lang=la}}
 [[et:libre]]
 [[el:libre]]
 [[es:libre]]
+[[eu:libre]]
 [[fr:libre]]
 [[ko:libre]]
 [[io:libre]]
