--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -64,10 +64,10 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Georgian: {{t-|ka|საფრანგეთი|tr=saphrangeti|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Frankreich|n}}
 * Greek: {{t+|el|Γαλλία|f|tr=Gallía}}
-* [[Gujarati]]: [[ફ્રાઁસ]]
+* [[Gujarati]]: [[ફ્રાઁસ]],  {{t|gu|ફ્રાન્સ|sc=Gujr}}
 * [[Haitian Creole]]: [[Frans]]
-* Hebrew: [[צרפת|צָרְפַת]] {{IPAchar|(Tzarfat; ''classical:'' Ṣārəphath)}}
-* Hindi: [[फ़्राँस]]
+* Hebrew: [[צרפת|צָרְפַת]] {{IPAchar|(Tzarfat; ''classical:'' Ṣārəphath)}},  {{t|he|צרפת|f|tr=tsarfat|alt=צָרְפַת|sc=Hebr}}
+* Hindi: [[फ़्राँस]],  {{t|hi|फ़्रांस|tr=frāns|sc=Deva}}
 * Hungarian: {{t+|hu|Franciaország}}
 * Icelandic: {{t+|is|Frakkland|n}}
 * [[Ido]]: [[Francia]]
@@ -84,6 +84,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Korean: {{t+|ko|프랑스|tr=Peurangseu}}
 * Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}
 {{trans-mid}}
+* [[Lao]]: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo}}
 * Latin: {{t+|la|Gallia|f}},  {{t+|la|Francia}}
 * Latvian: {{t+|lv|Francija|f|xs=Latvian}}
 * [[Limburgish]]: [[Frankriek]]
@@ -112,7 +113,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Romanian: {{t+|ro|Franţa|f}}
 * [[Romansch]]: [[Frantscha]]
 * Russian: {{t+|ru|Франция|f|tr=Fráncija}}
-* Sanskrit: [[फ्रांस]]
+* Sanskrit: [[फ्रांस]],  {{t|sa|फ्रांस|sc=Deva}}
 * [[Sardinian]]: [[Frantza]]
 * [[Scots]]: [[Franse]]
 * [[Scottish Gaelic]]: An [[Fraing|Fhraing]]
@@ -120,24 +121,24 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 *: Cyrillic: [[Француска]] {{f}}
 *: Roman: [[Francuska#Serbian|Francuska]] {{f}}
 * [[Sicilian]]: [[Francia]] {{f}}
-* Slovak: [[Francúzsko]]
+* Slovak: [[Francúzsko]],  {{t|sk|Francúzsko|n}}
 * Slovene: {{t+|sl|Francija|f}}
 * [[Sotho]]: France
 * Spanish: {{t+|es|Francia|f}}
 * Swahili: {{t+|sw|Ufaransa|xs=Swahili}}
 * Swedish: {{t+|sv|Frankrike}}
 * [[Tagalog]]: [[Pransya]]
-* [[Tamil]]: [[பிரான்ஸ்]] (pirāns)
-* Thai: {{Thai|[[ฝรั่งเศส]]}} (fàràngsèt)
+* [[Tamil]]: [[பிரான்ஸ்]] (pirāns),  {{t|ta|பிரான்ஸ்|tr=pirāns|sc=Taml}}
+* Thai: {{Thai|[[ฝรั่งเศส]]}} (fàràngsèt),  {{t|th|ฝรั่งเศส|tr=fàràngsèt|sc=Thai}}
 * [[Tok Pisin]]: [[Pranis]]
 * Turkish: {{t+|tr|Fransa}}
 * Ukrainian: {{t+|uk|Франція|f|tr=Fráncija|xs=Ukrainian}}
-* Urdu: {{fa-Arab|[[فرانس]]}} (frâns)
+* Urdu: {{fa-Arab|[[فرانس]]}} (frâns),  {{t|ur|فرانس|tr=frāns|sc=ur-Arab}}
 * Vietnamese: {{t-|vi|Pháp|xs=Vietnamese}}
 * [[Võro]]: [[Prantsusmaa]]
 * Welsh: {{t-|cy|Ffrainc|f|xs=Welsh}}
 * [[West Frisian]]: [[Frankryk]]
-* Yiddish: [[פֿראַנקרײַך]] (Frankraykh)
+* Yiddish: [[פֿראַנקרײַך]] (Frankraykh),  {{t|yi|פֿראַנקרײַך|n|tr=Frankraykh|sc=yi-Hebr}}
 {{trans-bottom}}
 
 ===See also===
