--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -64,10 +64,10 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Georgian: {{t-|ka|საფრანგეთი|tr=saphrangeti|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Frankreich|n}}
 * Greek: {{t+|el|Γαλλία|f|tr=Gallía}}
-* [[Gujarati]]: [[ફ્રાઁસ]],  {{t|gu|ફ્રાન્સ|sc=Gujr}}
+* [[Gujarati]]: {{t|gu|ફ્રાન્સ|sc=Gujr}}
 * [[Haitian Creole]]: [[Frans]]
-* Hebrew: [[צרפת|צָרְפַת]] {{IPAchar|(Tzarfat; ''classical:'' Ṣārəphath)}},  {{t|he|צרפת|f|tr=tsarfat|alt=צָרְפַת|sc=Hebr}}
-* Hindi: [[फ़्राँस]],  {{t|hi|फ़्रांस|tr=frāns|sc=Deva}}
+* Hebrew: {{t|he|צרפת|f|tr=tsarfat|alt=צָרְפַת|sc=Hebr}} (''classical:'' Ṣārəphath)}}
+* Hindi: {{t|hi|फ़्रांस|tr=frāns|sc=Deva}}, {{t|hi|फ़्राँस|tr=frām̐s|sc=Deva}} <!-- ??? -->
 * Hungarian: {{t+|hu|Franciaország}}
 * Icelandic: {{t+|is|Frakkland|n}}
 * [[Ido]]: [[Francia]]
@@ -113,7 +113,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Romanian: {{t+|ro|Franţa|f}}
 * [[Romansch]]: [[Frantscha]]
 * Russian: {{t+|ru|Франция|f|tr=Fráncija}}
-* Sanskrit: [[फ्रांस]],  {{t|sa|फ्रांस|sc=Deva}}
+* Sanskrit: {{t|sa|फ्रांस|sc=Deva}}
 * [[Sardinian]]: [[Frantza]]
 * [[Scots]]: [[Franse]]
 * [[Scottish Gaelic]]: An [[Fraing|Fhraing]]
@@ -128,17 +128,17 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Swahili: {{t+|sw|Ufaransa|xs=Swahili}}
 * Swedish: {{t+|sv|Frankrike}}
 * [[Tagalog]]: [[Pransya]]
-* [[Tamil]]: [[பிரான்ஸ்]] (pirāns),  {{t|ta|பிரான்ஸ்|tr=pirāns|sc=Taml}}
-* Thai: {{Thai|[[ฝรั่งเศส]]}} (fàràngsèt),  {{t|th|ฝรั่งเศส|tr=fàràngsèt|sc=Thai}}
+* [[Tamil]]: {{t|ta|பிரான்ஸ்|tr=pirāns|sc=Taml}}
+* Thai: {{t|th|ฝรั่งเศส|tr=fàràngsèt|sc=Thai}}
 * [[Tok Pisin]]: [[Pranis]]
 * Turkish: {{t+|tr|Fransa}}
 * Ukrainian: {{t+|uk|Франція|f|tr=Fráncija|xs=Ukrainian}}
-* Urdu: {{fa-Arab|[[فرانس]]}} (frâns),  {{t|ur|فرانس|tr=frāns|sc=ur-Arab}}
+* Urdu: {{t|ur|فرانس|tr=frāns|sc=ur-Arab}}
 * Vietnamese: {{t-|vi|Pháp|xs=Vietnamese}}
 * [[Võro]]: [[Prantsusmaa]]
 * Welsh: {{t-|cy|Ffrainc|f|xs=Welsh}}
 * [[West Frisian]]: [[Frankryk]]
-* Yiddish: [[פֿראַנקרײַך]] (Frankraykh),  {{t|yi|פֿראַנקרײַך|n|tr=Frankraykh|sc=yi-Hebr}}
+* Yiddish: {{t|yi|פֿראַנקרײַך|n|tr=Frankraykh|sc=yi-Hebr}}
 {{trans-bottom}}
 
 ===See also===
