t+ks:[[फ्रांस]] t+mr:[[फ्रांस]] ([[WT:EDIT|Assisted]]) <France#8036385>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -79,7 +79,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * [[Kalenjin]]: {{tø|kln|Frans}}
 * [[Kamba]]: {{tø|kam|Frans}}
 * [[Kannada]]: [[ಪ್ರಾಂಸ್]]
-* [[Kashmiri]]: [[फ्रांस]]
+* [[Kashmiri]]: [[फ्रांस]],  {{t|ks|फ्रांस|sc=ks-Arab}}
 * [[Kikuyu]]: {{tø|ki|Frans}}
 * Korean: {{t+|ko|프랑스|tr=Peurangseu}}
 * Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}
@@ -98,6 +98,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * [[Malagasy]]: [[Frantsa]]
 * Malay: {{t-|ms|Perancis|xs=Malay}}
 * Maltese: {{t-|mt|Franza|xs=Maltese}}
+* [[Marathi]]: {{t|mr|फ्रांस|sc=Deva}}
 * [[Meru]]: {{tø|mer|Frans}}
 * Mongolian: {{t|mn|Франц|tr=Frants|sc=Cyrl|xs=Mongolian}}, {{t|mn|Франц улс|tr=Frants uls|sc=Cyrl|xs=Mongolian}}
 * Nauruan: {{t-|na|France|xs=Nauruan}}
