--- a/en/惱/惱.15622.wikitext
+++ b/en/惱/惱.15622.wikitext
@@ -1,5 +1,6 @@
 {{also|悩|恼}}
 ==Translingual==
+{{ja-forms|[[悩]]|[[恼]]|惱}}
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9206<sub>3</sub>|canj=心女女田 (PVVW)}}
