--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -242,6 +242,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Romanian: {{t+|ro|juca}}
 * [[Romansch]]: {{t|rm|giugar|xs=Romansch}}
 * Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
+* [[Scottish Gaelic]]: {{t|gd|cluich}}
 * Slovak: [[hrať sa]]
 * Slovene: {{t+|sl|igrati se}}
 * Spanish: {{t+|es|jugar}}
