t+th:[[ประเทศอิสราเอล]] t-balance t+zh:[[以色列]] t+ar:[[إسرائيل]] t+vi:[[Israel]] ([[WT:EDIT|Assisted]]) <Israel#8064302>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -37,7 +37,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 ====Translations====
 {{trans-top|the state}}
 * Albanian: [[Izraeli]]
-* Arabic: {{Arab|[[إسرائيل]]}} (’isra’íl)
+* Arabic: {{Arab|[[إسرائيل]]}} (’isra’íl),  {{t|ar|إسرائيل|m|tr='isra'íl|sc=Arab}}
 * Armenian: {{t-|hy|Իսրայել|tr=Israyel}}
 * Belarusian: [[Ізраіль]] {{m}}
 * Bosnian: {{t-|bs|Izrael|m}}
@@ -69,13 +69,14 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * [[Kannada]]: [[ಇಸ್ರೇಲ್]]
 * [[Kikuyu]]: {{tø|ki|Israel}}
 * Korean: {{t+|ko|이스라엘|tr=Iseura-el|sc=Hang}}
-{{trans-mid}}
 * Latvian: {{t-|lv|Izraēla|xs=Latvian}},  {{t|lv|Izraēlas Valsts|xs=Latvian}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|Izraelis|m|xs=Lithuanian}},  {{t|lt|Izraelio Valstybė|f|xs=Lithuanian}}
 * [[Livonian]]: [[Izraēl]], [[Jūdõmō]]
 * [[Luo]]: {{tø|luo|Israel}}
 * [[Macedonian]]: {{t-|mk|Израел|m|tr=Ízrael}}
 * Maltese: [[Iżrael]]
+* Mandarin: {{t|zh|以色列|tr=Yǐsèliè|sc=Hani}}
 * [[Mansoanka]]: {{tø|msw|Israeli}}
 * [[Marathi]]: [[इस्रायल]] (isrāyal)
 * [[Meru]]: {{tø|mer|Israel}}
@@ -99,9 +100,11 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Swahili: {{t+|sw|Israeli|xs=Swahili}}
 * Swedish: {{t+|sv|Israel}}
 * [[Tatar]]: {{t-|tt|İsrael|xs=Tatar}}
+* Thai: {{t|th|ประเทศอิสราเอล|tr=bprà-tâyt ìt-sà-răa-ayn|sc=Thai}}
 * Turkish: {{t+|tr|İsrail}}
 * Ukrainian: [[Ізраїль]] (Izrajil’) {{m}}
 * Urdu: {{t-|ur|اسرائیل|xs=Urdu}}
+* Vietnamese: {{t|vi|Israel}}
 * Yiddish: {{t-|yi|ישראל|alt=ישׂראל|tr=Yisroel|xs=Yiddish}}
 {{trans-bottom}}
 
