t+fa:[[اسرائیل]] t+ps:[[اسرايل]] ([[WT:EDIT|Assisted]]) <Israel#8064306>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -83,8 +83,8 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Navajo: {{tø|nv|Ízrel Bikéyah}}
 * Norwegian: {{t+|no|Israel}}
 * [[Old Church Slavonic]]: [[Їздраил҄ь]]
-* [[Pashto]]: {{ps-Arab|[[اسرايل]]}}
-* Persian: {{fa-Arab|[[اسرائیل]]}} (Esrâ’il)
+* [[Pashto]]: {{ps-Arab|[[اسرايل]]}},  {{t|ps|اسرايل|sc=ps-Arab}}
+* Persian: {{fa-Arab|[[اسرائیل]]}} (Esrâ’il),  {{t|fa|اسرائیل|tr=Esrâ’il|sc=fa-Arab}}
 * Polish: {{t+|pl|Izrael}}
 * Portuguese: {{t+|pt|Israel}}
 * Romanian: {{t-|ro|Israel|n}}
