--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -37,14 +37,15 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 ====Translations====
 {{trans-top|the state}}
 * Albanian: [[Izraeli]]
-* Arabic: {{Arab|[[إسرائيل]]}} (’isra’íl),  {{t|ar|إسرائيل|m|tr='isra'íl|sc=Arab}}
+* Arabic: {{t|ar|إسرائيل|m|tr='isra'íl|sc=Arab}}
 * Armenian: {{t-|hy|Իսրայել|tr=Israyel}}
 * Belarusian: [[Ізраіль]] {{m}}
 * Bosnian: {{t-|bs|Izrael|m}}
 * [[Breton]]: {{t-|br|Israel|xs=Breton}}
 * Bulgarian: {{t+|bg|Израел|m|tr=Izrael}}
 * [[Catalan]]: {{t-|ca|Israel|m}}
-* Chinese: [[以色列]] (Yǐsèliè)
+* Chinese:
+*: Mandarin: {{t|zh|以色列|tr=Yǐsèliè|sc=Hani}}
 * Croatian: {{t+|hr|Izrael|m}}
 * Czech: {{t+|cs|Izrael}}
 * Danish: {{t+|da|Israel}}
@@ -76,19 +77,18 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * [[Luo]]: {{tø|luo|Israel}}
 * [[Macedonian]]: {{t-|mk|Израел|m|tr=Ízrael}}
 * Maltese: [[Iżrael]]
-* Mandarin: {{t|zh|以色列|tr=Yǐsèliè|sc=Hani}}
 * [[Mansoanka]]: {{tø|msw|Israeli}}
 * [[Marathi]]: [[इस्रायल]] (isrāyal)
 * [[Meru]]: {{tø|mer|Israel}}
 * Navajo: {{tø|nv|Ízrel Bikéyah}}
 * Norwegian: {{t+|no|Israel}}
 * [[Old Church Slavonic]]: [[Їздраил҄ь]]
-* [[Pashto]]: {{ps-Arab|[[اسرايل]]}},  {{t|ps|اسرايل|sc=ps-Arab}}
-* Persian: {{fa-Arab|[[اسرائیل]]}} (Esrâ’il),  {{t|fa|اسرائیل|tr=Esrâ’il|sc=fa-Arab}}
+* [[Pashto]]: {{t|ps|اسرايل|sc=ps-Arab}}
+* Persian: {{t|fa|اسرائیل|tr=Esrâ’il|sc=fa-Arab}}
 * Polish: {{t+|pl|Izrael}}
 * Portuguese: {{t+|pt|Israel}}
 * Romanian: {{t-|ro|Israel|n}}
-* Russian: [[Израиль]] (Izráil’) {{m}}
+* Russian: {{t|ru|Израиль|m|tr=Izráil’|sc=Cyrl}}
 * [[Samogitian]]: {{tø|bat-smg|Izraelės|m}},  {{tø|bat-smg|Izraele Valstībė|f}}
 * Sanskrit: {{t|sa|इस्रेल|xs=Sanskrit}}
 * [[Scottish Gaelic]]: {{t-|gd|Iosrael|f|xs=Scottish Gaelic}}
