--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -202,6 +202,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 [[io:find]]
 [[id:find]]
 [[it:find]]
+[[kn:find]]
 [[kk:find]]
 [[ku:find]]
 [[lo:find]]
