--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -1,14 +1,193 @@
-I was not here.''[[]]''
-grjrebgjnasfjkbgajkfdhkvbgabfdjankgbbdfbgbjfdg<nowiki><nowiki>{{}}</nowiki>[[Media:gsgsgn[[Media:gnsg[[Media:g[[Media:sgn[[Media:sgsgnsgng]]]]]]]]]]</nowiki>
+==English==
+{{wikipedia}}
+
+===Pronunciation===
+* {{a|UK}} {{IPA|/ˈdʒɜː.mə.nɪ/}}, {{SAMPA|/"dZ3:m@nI/}}
+* {{audio|En-uk-Germany.ogg|Audio (UK)}}
+* {{a|US}} {{IPA|/ˈdʒɝ.mə.ni/}}, {{SAMPA|/"dZ3`m@ni/}}
+* {{audio|en-us-Germany.ogg|Audio (US)}}
+
+===Proper noun===
+{{en-proper noun|German|ies|pl2=Germanys|-}}
+
+# {{uncountable}} Country in Central Europe. Official name: Federal Republic of Germany (Bundesrepublik Deutschland).
+# (''countable''; hist. 1949-1990) Either of the German states, FRG and GDR. ''The two Germanies exchanged permanent representatives in 1974.''
+# (''countable''; hist. pre-1871) Any of the German states. ''Melton’s useful new book traces the explosion of public institutions in eighteenth-century England, France and the Germanies.''
+
+====Translations====
+{{trans-top|Germany}}
+* [[Afrikaans]]: [[Duitsland]]
+* Arabic: {{t+|ar|ألمانيا|f|tr='almaanya}}
+* Armenian: {{t+|hy|Գերմանիա|tr=Germania}}
+* [[Azeri]]: {{t+|az|Almaniya|xs=Azeri}}
+* Belarusian: {{t|be|Германія|f|tr=Hermánija|xs=Belarusian}}
+* Bosnian: {{t-|bs|Njemačka|f}}
+* [[Breton]]: [[Alamagn]]
+* Bulgarian: {{t+|bg|Германия|f|tr=Germánija}}
+* [[Catalan]]: {{t+|ca|Alemanya|f}}, {{t-|ca|Alemània|f}}
+* Chinese:
+*: Mandarin: {{t-|cmn|德國|sc=Hani}}, {{t-|cmn|德国|tr=Déguó|sc=Hani}}, {{t-|cmn|德意志|tr=Déyìzhì|sc=Hani}}
+* [[Cornish]]: [[Almayn]]
+* Croatian: {{t+|hr|Njemačka|f|alt=Njèmačkā}}
+* Czech: {{t+|cs|Německo|n}}
+* Danish: {{t+|da|Tyskland|n}}
+* [[Dhivehi]]: [[ޖަރުމަނުވިލާތް]] (Jarumanu Vilay)
+* Dutch: {{t+|nl|Duitsland|n}}
+* Esperanto: {{t+|eo|Germanio|xs=Esperanto}}, {{t-|eo|Germanujo|xs=Esperanto}}
+* Estonian: {{t+|et|Saksamaa}}
+* Faroese: {{t-|fo|Týskland|n|xs=Faroese}}
+* Finnish: {{t+|fi|Saksa}}
+* French: {{t+|fr|Allemagne|f}}
+* [[Galician]]: {{t+|gl|Alemaña|f|xs=Galician}}
+* German: {{t+|de|Deutschland|n}}
+*: Middle High German: [[Tiutschlant]] {{n}}
+* Greek: {{t+|el|Γερμανία|f|tr=Germanía}}
+* Hawaiian: [[Kelemānia]]
+* Hebrew: {{t|he|גרמניה|f|tr=Germania}}
+* Hindi: {{t+|hi|जर्मनी|tr=jarmanii|xs=Hindi}}
+* Hungarian: {{t+|hu|Németország}}
+* Icelandic: {{t+|is|Þýskaland|n}}
+* Indonesian: {{t-|id|Jerman|xs=Indonesian}}
+* [[Interlingua]]: [[Germania]]
+* Irish: {{t-|ga|Gearmáin|f|alt=an Ghearmáin|xs=Irish}}
+* Italian: {{t+|it|Germania|f}}
+* Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
+* [[Khmer]]: {{Khmr|[[ប្រទេស​អាឡឺម៉ង់]]}} (bprədtēh āleumong)
+* Korean: {{t+|ko|독일|tr=Dogil|sc=Hang}}; {{t|ko|도이췰란드|tr=Doichwillandeu|sc=Hang}} (''North Korea''),  {{t+|ko|독일|tr=dogil|sc=Hang}}
+* Latin: {{t+|la|Germania|f}}
+{{trans-mid}}
+* Latvian: {{t+|lv|Vācija|f|xs=Latvian}}
+* Lithuanian: {{t+|lt|Vokietija|f|xs=Lithuanian}}
+* [[Livonian]]: [[Saksāmō]]
+* [[Luhya]]: {{tø|luy|Jamani}}
+* [[Luxembourgish]]: [[Däitschland]] {{n}}
+* [[Macedonian]]: {{t+|mk|Германија|f|tr=Germánija}}
+* Malay: {{t-|ms|Jerman|xs=Malay}}
+* [[Malayalam]]: {{t|ml|ജര്മനി|tr=jarmani|sc=Mlym|xs=Malayalam}}
+* Maltese: il-[[Ġermanja]] {{f}}
+* [[Manx]]: [[y Ghiarmaan]]
+* Mongolian: {{t|mn|Герман|tr=Germán|sc=Cyrl|xs=Mongolian}}
+* Navajo: {{tø|nv|Bééshbichʼahí}}
+* Norwegian: [[Tyskland]], [[Føderale Republikken Tyskland]]
+* Old English: {{t-|ang|Þēodiscland|n|xs=Old English}}
+* Persian: {{t+|fa|آلمان|tr=Âlmân|xs=Persian}}
+* Polish: {{t+|pl|Niemcy}}
+* Portuguese: {{t+|pt|Alemanha|f}}
+* Romanian: {{t+|ro|Germania|f}}
+* Russian: {{t+|ru|Германия|f|tr=Germánija}}
+* [[Scottish Gaelic]]: A' [[Gearmailt|Ghearmailt]] {{f}}
+* Serbian:
+*: Cyrillic: [[Немачка]] {{f}}
+*: Roman: [[Nemačka]] {{f}}
+* Slovak: [[Nemecko]] {{n}}
+* Slovene: {{t+|sl|Nemčija|f}}
+* Spanish: {{t+|es|Alemania|f}}
+* Swahili: [[Ujerumani]] ''(noun 6)'', {{t+|sw|Ujerumani|xs=Swahili}}
+* Swedish: {{t+|sv|Tyskland}}
+* [[Tamil]]: {{t|ta|ஜர்மனி|tr=jarmani|xs=Tamil}}
+* [[Telugu]]: {{t|te|జర్మని|tr=jarmani}}
+* Thai: {{Thai|[[ชาวเยอรมัน]]}} (chaao yerráman), {{t|th|ประเทศเยอรมัน}}
+* Turkish: {{t+|tr|Almanya}}
+* Ukrainian: {{t+|uk|Німеччина|f|tr=Niméččyna|xs=Ukrainian}}
+* [[Uyghur]]: {{t-|ug|گېرمانىيە|tr=gérmaniye|sc=ug-Arab|xs=Uyghur}}
+* Vietnamese: {{t|vi|nước Đức|xs=Vietnamese}}
+* [[Võro]]: [[S'aksamaa]]
+* Welsh: {{t-|cy|Yr Almaen|f|xs=Welsh}}
+* [[West Frisian]]: [[Dútslân]] {{n}}
+* [[Xhosa]]: [[iJamani]] ''(noun 5)''
+* Yiddish: {{t|yi|דײַטשלאַנד|n|tr=Daytshland|sc=yi-Hebr|xs=Yiddish}}
+{{trans-bottom}}
+
+===See also===
+{{top2}}
+* [[Alemania]]
+* [[Alsace|Alsatia]]
+* [[Austria]]
+* [[Bavaria]]
+* [[Appendix:Countries of the world|Countries of the world]]
+* [[Deutsch]]
+* [[Deutschland]]
+* [[Diets]], [[Dietsch]]
+* [[Duits]]
+* [[Dutch]]
+* [[East Germany]]
+* [[German Democratic Republic]]
+* [[German Empire]]
+* [[German language]]
+* [[German]], [[Germanic]]
+* [[Germania]]
+* [[Goth]]
+{{mid2}}
+* [[Hun]]
+* [[Liechtenstein]]
+* [[Luxembourg]]
+* [[Luxemburg]]
+* [[Netherlands]]
+* [[Prussia]]
+* [[Reich]], [[Riik]], [[Rick]], [[Rich]], [[Rijk]], [[Rike]], [[Rik]], [[Rig]], [[Riche]], [[Ritch]]
+* [[Saxon]]
+* [[Silesia]]
+* [[Swabia]]
+* [[Switzerland]]
+* [[Teuton]], [[Teutonic]]
+* [[Tirol]]
+* [[Tyskland]]
+* [[Vandal]]
+* [[Weimar Republic]]
+* [[West Germany]]
+{{bottom2}}
+
+===Anagrams===
+* {{alphagram|aegmnry}}
+* [[mangery#English|mangery]]
+* [[menagry#English|menagry]]
 
 
---[[Special:Contributions/68.12.191.185|68.12.191.185]] 23:18, 14 December 2009 (UTC)--[[Special:Contributions/68.12.191.185|68.12.191.185]] 23:18, 14 December 2009 (UTC)--[[Special:Contributions/68.12.191.185|68.12.191.185]] 23:18, 14 December 2009 (UTC)
-----
+[[Category:Countries]]
+[[Category:English proper nouns]]
+[[Category:Exonyms]]
 
-----
-
-----
-
-----
-
-== [[English]] ==
+[[af:Germany]]
+[[ar:Germany]]
+[[zh-min-nan:Germany]]
+[[bg:Germany]]
+[[cs:Germany]]
+[[de:Germany]]
+[[et:Germany]]
+[[el:Germany]]
+[[es:Germany]]
+[[fa:Germany]]
+[[fr:Germany]]
+[[fy:Germany]]
+[[gl:Germany]]
+[[ko:Germany]]
+[[hi:Germany]]
+[[io:Germany]]
+[[id:Germany]]
+[[it:Germany]]
+[[kl:Germany]]
+[[kk:Germany]]
+[[sw:Germany]]
+[[ku:Germany]]
+[[lo:Germany]]
+[[lv:Germany]]
+[[lt:Germany]]
+[[hu:Germany]]
+[[mi:Germany]]
+[[nl:Germany]]
+[[ja:Germany]]
+[[no:Germany]]
+[[oc:Germany]]
+[[nds:Germany]]
+[[pl:Germany]]
+[[pt:Germany]]
+[[ro:Germany]]
+[[ru:Germany]]
+[[simple:Germany]]
+[[fi:Germany]]
+[[sv:Germany]]
+[[th:Germany]]
+[[tr:Germany]]
+[[vi:Germany]]
+[[vo:Germany]]
+[[zh:Germany]]
