--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -9,9 +9,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * {{enPR|fīnd}}, {{IPA|/faɪnd/}}, {{SAMPA|/faInd/}}
 * {{audio|en-us-find.ogg|Audio (US)}}
 * {{rhymes|aɪnd}}
-
-====Homophones====
-* [[fine]]d
+* {{homophones|fined}}
 
 ===Verb===
 [[File:Nymphs finding the Head of Orpheus.jpg|thumb|upright|"Nymphs Finding the Head of Orpheus", a painting by [[w:John William Waterhouse|John William Waterhouse]]]]
