iwiki +[[:lt:New Zealand]] <New Zealand#8075501>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -133,6 +133,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 [[io:New Zealand]]
 [[id:New Zealand]]
 [[sw:New Zealand]]
+[[lt:New Zealand]]
 [[hu:New Zealand]]
 [[ja:New Zealand]]
 [[no:New Zealand]]
