-''(Zoölogy)'' +{{Zoölogy}} <polyeidic#8075883>

--- a/en/p/polyeidic.7206.wikitext
+++ b/en/p/polyeidic.7206.wikitext
@@ -5,4 +5,5 @@
 
 ===Adjective===
 {{en-adj|-}}
-#''(Zoölogy):'' Passing through several distinct [[larval]] forms; -- having several distinct kinds of [[young]].
+
+# {{Zoölogy}} Passing through several distinct [[larval]] forms; -- having several distinct kinds of [[young]].
