t+zh:[[漂亮]] t-balance t+zh:[[美]] t+zh:[[好看]] ([[WT:EDIT|Assisted]]) <beautiful#8078716>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -80,8 +80,8 @@
 * Hungarian: {{t+|hu|szép}},  {{t+|hu|gyönyörű}}
 * Icelandic: {{t+|is|fallegur}}, {{t+|is|fagur}}
 * [[Ido]]: {{t+|io|bela|xs=Ido}}
-* Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 {{trans-mid}}
+* Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 * Irish: {{t-|ga|álainn|xs=Irish}}
 * Italian: {{t+|it|bello}}
 * Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
@@ -89,6 +89,7 @@
 * Kurdish: {{ku-Arab|[[جوان]]}}, {{ku-Arab|[[ئێسک سووک]]}}
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
 * [[Macedonian]]: {{t|mk|убав|m|tr=úbav}},  {{t|mk|убава|f|tr=úbava}},  {{t|mk|убаво|n|tr=úbavo}},  {{t-|mk|прекрасен|m|tr=prékrasen}},  {{t|mk|прекрасна|f|tr=prékrasna}},  {{t|mk|прекрасно|n|tr=prékrasno}}
+* Mandarin: {{t|zh|漂亮|tr=piàoliàng|sc=Hani}},  {{t|zh|美|tr=měi|sc=Hani}},  {{t|zh|好看|tr=hǎokàn|sc=Hani}}
 * Navajo: {{tø|nv|nizhóní}}
 * [[Novial]]: [[beli]]
 * [[Old Church Slavonic]]: {{tø|cu|красьнъ|tr=krasĭnŭ|sc=Cyrs}}
