--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -64,6 +64,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Lithuanian: [[surasti]]
 * Mongolian: {{t-|mn|олох|sc=Cyrl|xs=Mongolian}}
 * Norwegian: {{t+|no|finne}}
+* Persian: {{t|fa|يافتن|tr=yâftan|sc=fa-Arab}}
 * Polish: {{t+|pl|znajdować}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Romanian: {{t+|ro|găsi}}
