--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -4,8 +4,7 @@
 From {{proto|Semitic|ʾarṣ́-|lang=he}}.
 
 ===Pronunciation===
-* {{a|phonemic}} {{IPA|/ˈerets/|lang=he}}
-* {{a|IL}} {{IPA|/ˈɛʁɛts/|lang=he}}
+* {{a|IL}} {{IPA|/ˈerets/|lang=he}}
 
 ===Noun===
 {{he-noun|g=f|tr=érets|wv=אֶרֶץ|pl=ארצות|plwv=אֲרָצוֹת|cons=ארץ|conswv=אֶרֶץ־|plcons=ארצות|plconswv=אַרְצוֹת־}}
