--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -63,6 +63,12 @@
 
 # {{defn|Mandarin}}
 
+----
+
+==Vietnamese==
+===Han character===
+'''昆''' ([[con]], [[côn]], [[gon]])
+
 [[fr:昆]]
 [[hu:昆]]
 [[ja:昆]]
