--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -67,7 +67,7 @@
 
 ==Vietnamese==
 ===Han character===
-'''昆''' ([[con]], [[côn]], [[gon]])
+'''昆''' ([[côn]], [[con]], [[gon]])
 
 [[fr:昆]]
 [[hu:昆]]
