--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -59,7 +59,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[kūn]] ([[kun1]])|wg=k'un<sup>1</sup>}}
+{{cmn-hanzi|pin=[[kūn]] ([[kun1]])|wg=k'un<sup>1</sup>}}, [[hùn]]
 
 # {{defn|Mandarin}}
 
