t+el:[[μαντρί]] t+el:[[στάνη]] t-balance ([[WT:EDIT|Assisted]]) <pen#8092706>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -26,6 +26,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * Finnish: {{t-|fi|karsina}}
 * French: {{t+|fr|enclos|m}}
 * German: [[Pferch]] {{m}}
+* Greek: {{t|el|μαντρί|n|tr=madrí|sc=Grek}},  {{t|el|στάνη|f|tr=stáni|sc=Grek}}
 * Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, {{italbrac|for sheep}} [[ovile]] {{m}}
 {{trans-mid}}
 * [[Macedonian]]: {{t|mk|тoр|m|tr=tor}},  {{qualifier|for sheep}} {{t|mk|трло|n|tr=t'rlo}}
