--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -85,6 +85,7 @@
 * Romanian: {{t+|ro|împinge}}, {{t+|ro|apăsa}}
 * Russian: {{t+|ru|толкать|tr=tolkát’}}
 * Samoan: {{t|sm|smatgar|xs=Samoan}}
+* [[Scottish Gaelic]]: {{t|gd|stob}}
 * Slovene: [[potiskati]]
 * Spanish: {{t+|es|empujar}}
 * Swahili: [[kusukuma]]
@@ -117,6 +118,7 @@
 {{trans-mid}}
 * Italian: {{t+|it|spingere}}
 * Kurdish: {{ku-Arab|[[پاڵ نان]]}}
+* [[Scottish Gaelic]]: {{t|gd|stob}}
 {{trans-bottom}}
 
 {{trans-top|intransitive: tense the muscles of the abdomen}}
