/* Synonyms */ +Wikisaurus <play#8117917>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -31,6 +31,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 
 =====Synonyms=====
 * {{sense|literary composition}} [[drama]]
+* See also [[Wikisaurus:drama]]
 
 =====Translations=====
 {{trans-top|playful activity}}
