add Italian entry <bridge#8123138>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -311,7 +311,18 @@ From {{etyl|en|fr}} {{term|bridge|lang=en}}.
 # {{card games|lang=fr}} [[#Etymology_2|bridge]]
 
 ----
+==Italian==
 
+===Noun===
+{{infl|it|noun}} {{m|inv}}
+
+# [[#English|bridge]] (card game)
+
+=====Related terms====
+*[[bridgista]]
+*[[bridgistico]]
+
+----
 ==Swedish==
 
 ===Noun===
