--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -318,11 +318,12 @@ From {{etyl|en|fr}} {{term|bridge|lang=en}}.
 
 # [[#English|bridge]] (card game)
 
-=====Related terms====
+====Related terms====
 *[[bridgista]]
 *[[bridgistico]]
 
 ----
+
 ==Swedish==
 
 ===Noun===
