t+fr:[[compter]] ([[WT:EDIT|Assisted]]) <count#8123874>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -24,6 +24,7 @@ From {{etyl|enm}} ''[[counten#Middle English|counten]]'' from {{etyl|xno}} ''[[c
 * Bulgarian: {{t|bg|смятане|n}}
 {{trans-mid}}
 * [[Catalan]]: {{t|ca|comptage|m}}, {{t+|ca|compte|m}}
+* French: {{t|fr|compter}}
 {{trans-bottom}}
 
 {{trans-top|the result of a tally that reveals the number of items in a set}}
