iwiki +[[:kn:curtain]] <curtain#8128260>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -116,6 +116,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 [[io:curtain]]
 [[id:curtain]]
 [[it:curtain]]
+[[kn:curtain]]
 [[kk:curtain]]
 [[lo:curtain]]
 [[hu:curtain]]
