rmv German language, {{rfe}} <Germany#8163893>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -1,6 +1,9 @@
 ==English==
 {{wikipedia}}
 
+===Etymology===
+{{rfe|lang=en}}
+
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈdʒɜː.mə.nɪ/}}, {{SAMPA|/"dZ3:m@nI/}}
 * {{audio|En-uk-Germany.ogg|Audio (UK)}}
@@ -113,7 +116,6 @@
 * [[East Germany]]
 * [[German Democratic Republic]]
 * [[German Empire]]
-* [[German language]]
 * [[German]], [[Germanic]]
 * [[Germania]]
 * [[Goth]]
