--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -64,6 +64,12 @@
 
 [[Category:Mandarin entries with audio links]]
 
+----
+
+==Vietnamese==
+===Han character===
+'''停''' ([[đình]], [[dành]], [[đành]], [[đừng]], [[dừng]], [[rành]])
+
 [[fr:停]]
 [[ko:停]]
 [[mg:停]]
